Add all required logos and avatars for Vercel build; update branding to Doge Initiative

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "doge-yield-stealth",
+    "name": "doge-initiative",
     "version": "1.0.0",
     "private": true,
     "scripts": {
