--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "ethers": "^6.13.1",
         "framer-motion": "^11.2.10",
         "next": "^14.2.30",
+        "pino-pretty": "13.0.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.2.1",
